# zlg

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
docs/: BENCHMARKS.md  BENCHMARK_HARNESS_PLAN.md  BENCHMARK_MEASUREMENT_RELIABILITY.md  CLI_DESIGN_DECISIONS_PHASE2.md  CODEX_PHASE0H_PROMPT.md  CODEX_PHASE0I_PREBENCH_PROMPT.md  CODEX_PHASE0J_PROMPT.md  CODEX_PHASE0K_PROMPT.md  CODEX_PHASE0L_PROMPT.md  CODEX_PHASE0M_PROMPT.md  CODEX_PHASE0N_PROMPT.md  CODEX_PHASE0O_PROMPT.md  CODEX_PHASE0P_PROMPT.md  CODEX_PHASE0Q_PROMPT.md  CODEX_PHASE0R_PROMPT.md  CODEX_PHASE0S_PROMPT.md  CODEX_PHASE0T_FIX_PROMPT.md  CODEX_PHASE0T_PROMPT.md  CODEX_PHASE0U_PROMPT.md  CODEX_PHASE0V_PROMPT.md  CODEX_PHASE0W_PROMPT.md  CODEX_PHASE0X_PROMPT.md  CODEX_PHASE0Y_FIX_PROMPT.md  CODEX_PHASE0Y_PROMPT.md  CODEX_PHASE0Z_PROMPT.md  CODEX_PHASE1A_PROMPT.md  CODEX_PHASE1B_PROMPT.md  CODEX_PHASE1C_FIX_PROMPT.md  CODEX_PHASE1C_PROMPT.md  CODEX_PHASE1D_PROMPT.md  CODEX_PHASE1E_PROMPT.md  CODEX_PHASE1F_PROMPT.md  CODEX_PHASE1G_PROMPT.md  CODEX_PHASE1H_PROMPT.md  CODEX_PHASE1I_PROMPT.md  CODEX_PHASE1J_PROMPT.md  CODEX_PHASE1K_PROMPT.md  CODEX_PHASE1L_PROMPT.md  CODEX_PHASE1M_PROMPT.md  CODEX_PHASE1N_PROMPT.md  (+70 more)
fixtures/: search_cases.txt  smoke.txt
scripts/: archive_hardening_check.sh  benchmark_repeated_median.sh  check.sh  convert_check.sh  phase0h_correctness_check.sh  phase0h_smoke.sh  phase0i_artifact_hygiene_check.sh  phase0i_policy_matrix_check.sh  phase0i_prebench_once.sh  phase0j_csv_presence_check.sh  phase0j_instrumented_prebench_once.sh  phase0k_csv_commit_guard.sh  phase0k_search_bottleneck_once.sh  phase0l_index_strategy_once.sh  phase0l_no_index_smoke.sh  phase0m_selector_postings_once.sh  (+44 more)
src/: chunk.rs  (+4 more)
(+229 files in other folders)
