[package]
name = "zlg"
version = "0.1.0-phase0"
edition = "2021"
license = "MIT"
description = "Prototype searchable zstd-backed log compression CLI"
repository = "https://example.invalid/zlg"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
pcre2 = "0.2.11"
memchr = "2.7"
regex = "1.11"
rdxsort = "0.3"
thiserror = "2.0"
rdst = { version = "0.20", default-features = false }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
