[package]
name = "zlg"
version = "0.1.0-phase2a"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]
description = "Searchable zstd-backed log compression CLI"
repository = "https://example.invalid/zlg"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
pcre2 = "0.2.11"
memchr = "2.7"
regex = "1.11"
thiserror = "2.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
